<resources xmlns:tools="http://schemas.android.com/tools" translatable="false">
    <string name="app_name">好服多多</string>
    <string name="network_fail_to_connect">联网失败,请检查网络</string>
    <string name="network_fail_to_timeout">联网请求超时,请检查网络</string>
    <string name="network_fail_to_request">联网请求失败,请重新尝试</string>
    <string name="network_fail_to_responseDate">数据格式错误,请重新尝试</string>
    <string name="share">分享</string>
    <string name="sure">确认</string>
    <string name="copy_success">已复制到粘贴板</string>
    <string name="app_downloading" tools:ignore="TypographyEllipsis">急速更新中...</string>
    <string name="login_welcome">欢迎登录</string>
    <string name="area_code_str">区号</string>
    <string name="area_code">+86</string>
    <string name="CN">CN +86</string>
    <string name="please_enter_phone">请输入手机号码</string>
    <string name="login">登录/注册</string>
    <string name="login_quick">一键登录/注册</string>
    <string name="login_other_phone">其他手机号登录</string>
    <string name="login_tips">登录表示您已阅读且同意</string>
    <string name="user_agreement">《用户协议》</string>
    <string name="privacy_agreement">《隐私协议》</string>
    <string name="login_quick_tips">且授权易盾一键登录SDK使用本机号码</string>
    <string name="china_telecom">中国电信</string>
    <string name="china_mobile">中国移动</string>
    <string name="china_unicom">中国联通</string>
    <string name="server_agreement">服务协议</string>
    <string name="loading" tools:ignore="TypographyEllipsis">加载中...</string>
    <string name="please_enter_code">请输入验证码</string>
    <string name="send_to">已发送至</string>
    <string name="resend">重新发送</string>
    <string name="need_reLogin">当前运营商已切换,请重新登录</string>
    <string name="title_home">首页</string>
    <string name="title_pc">端游</string>
    <string name="title_phone">手游</string>
    <string name="title_help">好服助手</string>
    <string name="title_my_games">我的游戏</string>
    <string name="title_me">我的</string>
    <string name="title_mv">精彩视频</string>
    <string name="update_version">版本更新</string>
    <string name="update_cancel">暂不更新</string>
    <string name="update_now">立即更新</string>
    <string name="code">邀请码</string>
    <string name="today">今日发布</string>
    <string name="tomorrow">明日发布</string>
    <string name="history">历史发布</string>
    <string name="current_person">当前人物</string>
    <string name="all_person">所有人物</string>
    <string name="new_person">新增绑定</string>
    <string name="pc">PC</string>
    <string name="phone">手游</string>
    <string name="update">更新</string>
    <string name="nick_name">昵称: </string>
    <string name="professional">职业: </string>
    <string name="experience">经验: </string>
    <string name="level">级</string>
    <string name="job_0">战士</string>
    <string name="job_1">法师</string>
    <string name="job_2">道士</string>
    <string name="server_name">服务器: </string>
    <string name="re_start">重新上线需再次开启</string>
    <string name="click_start">点击开启</string>
    <string name="click_get">点击领取</string>
    <string name="got">已领取</string>
    <string name="cool">冷却:</string>
    <string name="delete_role">角色删除</string>
    <string name="delete_role_tips">您将从绑定列表删除该角色</string>
    <string name="delete_now">立即删除</string>
    <string name="delete_success">删除成功</string>
    <string name="double_click_quit">双击退出</string>
    <string name="load_more" tools:ignore="TypographyEllipsis">正在加载更多...</string>
    <string name="bind_tips">在NPC处输入该绑定码，即可开启好服助手</string>
    <string name="bind_code">绑定码</string>
    <string name="look_role">查看角色</string>
    <string name="personal_info">个人资料</string>
    <string name="look_his">我的收藏</string>
    <string name="account_safe">账户安全</string>
    <string name="current_version">当前版本</string>
    <string name="quit">退出登录</string>
    <string name="quit_tips">您将退出APP并清空缓存数据</string>
    <string name="wealth">财富</string>
    <string name="integral">金币</string>
    <string name="influence">影响力</string>
    <string name="get_something">获取</string>
    <string name="save">保存</string>
    <string name="user_name">昵称</string>
    <string name="user_des">个人简介</string>
    <string name="user_des_tip">输入一句话介绍自己(不超过30字符)</string>
    <string name="user_birthday">生日</string>
    <string name="user_sex">性别</string>
    <string name="user_phone">手机号</string>
    <string name="not_setting">未设置</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="cancel">取消</string>
    <string name="update_success">更新个人信息成功</string>
    <string name="change_phone">更换手机号</string>
    <string name="change_phone_tips">更换手机号后，下次登录可以使用新手机号登录。</string>
    <string name="current_phone">当前手机号</string>
    <string name="enter_new_phone">输入需要更换的手机号</string>
    <string name="next">下一步</string>
    <string name="please_enter_right_phone">请输入正确的手机号</string>
    <string name="change_phone_success">修改手机号成功</string>
    <string name="show_all">展开所有</string>
    <string name="clear_all">清除搜索记录</string>
    <string name="hot_search">热门搜索</string>
    <string name="search_hint">请输入游戏ID/游戏名/视频ID搜索</string>
    <string name="game_id">游戏ID: </string>
    <string name="game">游戏</string>
    <string name="detail">详情</string>
    <string name="common">评论</string>
    <string name="use_pc">请手动在电脑上输入网址打开</string>
    <string name="last_update">最近更新</string>
    <string name="update_today">今日更新</string>
    <string name="days">天前</string>
    <string name="game_pic">游戏截图</string>
    <string name="game_video">游戏视频</string>
    <string name="all_pic">图集(全部0张)</string>
    <string name="all_video">全部0个</string>
    <string name="function_updating">功能正在优化中</string>
    <string name="save_pic">图片保存</string>
    <string name="save_pic_tip">将下载并保存图片至手机相册</string>
    <string name="save_pic_success">已保存至手机相册</string>
    <string name="save_pic_fail">下载保存到本地失败</string>
    <string name="wechat">微信</string>
    <string name="moment">朋友圈</string>
    <string name="qq">QQ</string>
    <string name="space">QQ空间</string>
    <string name="need_install_qq">请先安装QQ</string>
    <string name="need_install_wechat">请先安装微信</string>
    <string name="share_title">我发现好多好玩的服,每天都在开新区</string>
    <string name="quickly" tools:ignore="Typos">速来 速来</string>
    <string name="money_not_enough">积分不足</string>
    <string name="download">下载</string>
    <string name="downloading">下载中</string>
    <string name="re_download">继续下载</string>
    <string name="pause_download">暂停下载</string>
    <string name="install_now">立即安装</string>
    <string name="open_game">打开游戏</string>
    <string name="cancel_download">取消下载</string>
    <string name="cancel_download_msg">您将取消游戏下载,并清空游戏下载进度</string>
    <string name="cancel_now">立即取消</string>
    <string name="quit_download_msg">正在下载游戏,退出当前界面将暂停下载,确认要退出吗?</string>
    <string name="i_paly_now">我正在玩</string>
    <string name="to_paly_with">来一起玩吧</string>
    <string name="download_success2install">下载完成,请返回安装</string>
    <string name="notice">公告</string>
    <string name="open">开启</string>
    <string name="exchange">兑换</string>
    <string name="residue">剩余</string>
    <string name="daily_check">每日签到</string>
    <string name="limit_white_piao">限时白嫖</string>
    <string name="invite_gift">邀请大礼</string>
    <string name="day">第X天</string>
    <string name="signed">已签到</string>
    <string name="get_integral">获得 X 个金币</string>
    <string name="get_experience">获得X经验</string>
    <string name="time_5_9" tools:ignore="TypographyDashes">05:00 - 09:00</string>
    <string name="time_10_14" tools:ignore="TypographyDashes">10:00 - 14:00</string>
    <string name="time_15_19" tools:ignore="TypographyDashes">15:00 - 19:00</string>
    <string name="time_20_24" tools:ignore="TypographyDashes">20:00 - 24:00</string>
    <string name="overdue">已过期</string>
    <string name="can_get">可领取</string>
    <string name="get">领取</string>
    <string name="invite_success">成功邀请好友即可获得</string>
    <string name="can_obtain">即可获得</string>
    <string name="complete_goal">完成目标</string>
    <string name="update_app_level">将APP等级提升至X级</string>
    <string name="share_tips">每日首次分享至微信或者QQ可获得X金币</string>
    <string name="level_update_share_title">万款游戏,随便玩</string>
    <string name="level_update_share_msg">充值礼包/元宝回收/免费泡点/满级VIP/……只要你能想到的,我们这里,应有尽有!</string>
    <string name="app_welfare">《好服多多》专属福利</string>
    <string name="get_records">领取记录</string>
    <string name="time">时间</string>
    <string name="game_pic_list">《X》图集</string>
    <string name="author_fail">授权失败,无法安装更新应用</string>
    <string name="gift_code">礼包码</string>
    <string name="get_gift_code">抢</string>
    <string name="to_get_gift_code">开抢</string>
    <string name="get_gift_code_tips">使用说明:</string>
    <string name="get_gift_code_tips_detail">1. 点击右侧按钮抢礼包码\n2. 进入游戏-点开好服多多福利NPC-输入礼包码</string>
    <string name="gift_records">礼包记录</string>
    <string name="gift_last_num">剩余礼包：</string>
    <string name="normal_get">普通领取</string>
    <string name="double_get">双倍领取</string>
    <string name="to_share">分享至微信群或者QQ群</string>
    <string name="tips_msg">恭喜用户X在《Y》中成功抢到超级大礼包</string>
    <string name="click_head_login">点击头像登录</string>
    <string name="string_001">共X条回复</string>
    <string name="string_002">共X条评论</string>
    <string name="string_003">压缩视频</string>
    <string name="string_004">上传图片</string>
    <string name="string_005">上传视频</string>
    <string name="string_006">发布评论…</string>
    <string name="string_007">评价成功!</string>
    <string name="string_008">游客</string>
    <string name="string_009">光临直播间</string>
    <string name="string_010">人</string>
    <string name="string_011">你还没有写弹幕呢…</string>
    <string name="string_012">网络异常,请检查网络状态</string>
    <string name="string_013">主播已离线</string>
    <string name="string_014">直播间不存在</string>
    <string name="string_015">安装成功</string>
    <string name="string_016">回复:</string>
    <string name="string_017">请输入正确的用户名</string>
    <string name="string_018">还没有输入评论呢</string>
    <string name="string_019">和谐、有爱、拒绝黄赌毒</string>
    <string name="string_020">发弹幕…</string>
    <string name="string_021">视频发布历史</string>
    <string name="string_022">一个吸引人的标题,能让更多人看到~</string>
    <string name="string_023">选封面</string>
    <string name="string_024">是否为视频广告</string>
    <string name="string_025">注:上传视频如果带有广告需要勾选广告视频,否则不予通过</string>
    <string name="string_026">注:广告视频通过需联系XX(仅可发布端游广告)</string>
    <string name="string_027">点击输入端游下载地址</string>
    <string name="string_028">发布视频</string>
    <string name="string_029">重新发布</string>
    <string name="string_030">审核失败:</string>
    <string name="string_031">APP内显示的地址为</string>
    <string name="string_032">电脑输入下方地址下载游戏</string>
    <string name="string_033">删除视频</string>
    <string name="string_034">视频一经删除,该视频数据将清空!</string>
    <string name="string_035">视频时长不得超过3分钟</string>
    <string name="string_036">广告视频需要设置下载地址</string>
    <string name="string_037">请设置视频标题</string>
    <string name="string_038">视频发布中…</string>
    <string name="string_039">正在截取压缩视频封面…</string>
    <string name="string_040">截取压缩视频封面失败</string>
    <string name="string_041">发布成功,等待审核…</string>
    <string name="string_042">视频大小不得超过100M</string>
    <string name="string_043">上传中</string>
    <string name="string_044">上传成功</string>
    <string name="string_045">剩余时间</string>
    <string name="string_046">压缩中</string>
    <string name="string_047">正在处理视频,请稍后…</string>
    <string name="string_048">取消收藏</string>
    <string name="string_049">收藏成功</string>
    <string name="string_050">审核中…</string>
    <string name="string_051">审核通过</string>
    <string name="string_052">审核拒绝</string>
    <string name="string_053">字符违规</string>
    <string name="string_054">该视频违规，请重新选择视频</string>
    <string name="string_055">端游下载地址不符合规范</string>
    <string name="string_056">上传失败</string>
    <string name="string_057">包含网址</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>