<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_login"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_login_first_back"
        android:layout_width="@dimen/dp_32"
        android:layout_height="@dimen/dp_32"
        android:layout_marginStart="@dimen/dp_42"
        android:layout_marginTop="@dimen/dp_48"
        android:src="@mipmap/login_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_38"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/login_welcome"
        android:textColor="@color/white_FFFFFF"
        android:textSize="@dimen/sp_18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_38"
        android:layout_marginTop="@dimen/dp_12"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white_FFFFFF"
            android:textSize="@dimen/sp_28"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/dp_8"
            android:layout_height="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_4"
            android:src="@drawable/point_orange" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_114"
        android:layout_marginEnd="@dimen/dp_32"
        android:background="@drawable/bg_login_enter_line"
        android:orientation="horizontal"
        android:padding="@dimen/dp_9">

        <LinearLayout
            android:id="@+id/ll_login_first_areaCode"
            android:layout_width="@dimen/dp_79"
            android:layout_height="@dimen/dp_38"
            android:background="@drawable/bg_login_enter"
            android:drawableEnd="@mipmap/down_black"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CN"
                android:textColor="@color/black_1A241F"
                android:textSize="@dimen/sp_12" />

            <ImageView
                android:layout_width="@dimen/dp_15"
                android:layout_height="@dimen/dp_15"
                android:layout_marginStart="@dimen/dp_5"
                android:src="@mipmap/down_black" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_login_first_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_20"
            android:background="@null"
            android:hint="@string/please_enter_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:maxLines="1"
            android:textColor="@color/white_FFFFFF"
            android:textColorHint="@color/white_FFFFFF"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_login_first_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_32"
        android:background="@drawable/bg_login_enter_un"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/green_63C5AD"
        android:textSize="@dimen/sp_14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tips"
            android:textColor="@color/red_FF0000"
            android:textSize="@dimen/sp_11" />

        <TextView
            android:id="@+id/tv_login_first_userAgreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement"
            android:textColor="@color/green_00FF00"
            android:textSize="@dimen/sp_11"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_login_first_privacyAgreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_agreement"
            android:textColor="@color/green_00FF00"
            android:textSize="@dimen/sp_11"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>