<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_10"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_me_white"
        android:orientation="horizontal"
        android:padding="@dimen/dp_10">

        <LinearLayout
            android:id="@+id/ll_share_wechat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp_45"
                android:layout_height="@dimen/dp_45"
                android:src="@mipmap/wechat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/wechat"
                android:textColor="@color/black_1A241F"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_share_moment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp_45"
                android:layout_height="@dimen/dp_45"
                android:src="@mipmap/moment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/moment"
                android:textColor="@color/black_1A241F"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_share_qq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp_45"
                android:layout_height="@dimen/dp_45"
                android:src="@mipmap/qq" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/qq"
                android:textColor="@color/black_1A241F"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_share_space"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp_45"
                android:layout_height="@dimen/dp_45"
                android:src="@mipmap/space" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/space"
                android:textColor="@color/black_1A241F"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_share_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/sp_16"
        android:layout_marginTop="@dimen/dp_5"
        android:padding="@dimen/dp_15"
        android:background="@drawable/bg_white_6"
        android:textColor="@color/black_1A241F"
        android:text="@string/cancel"/>

</LinearLayout>