<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_FFFFFF"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".activity.UserInfoActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_28" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60">

        <ImageView
            android:id="@+id/iv_userInfo_back"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            android:layout_centerVertical="true"
            android:padding="@dimen/dp_16"
            android:src="@mipmap/back_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/personal_info"
            android:textColor="@color/black_1A241F"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/tv_userInfo_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_click"
            android:padding="@dimen/dp_10"
            android:text="@string/save"
            android:textColor="@color/green_5963C5AD"
            android:textSize="@dimen/sp_14" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="@dimen/dp_90"
        android:layout_height="@dimen/dp_90"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginBottom="@dimen/dp_32">

        <com.fortune.zg.widget.RoundImageView
            android:id="@+id/civ_userInfo_head"
            android:layout_width="@dimen/dp_90"
            android:layout_height="@dimen/dp_90"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            android:src="@mipmap/head_photo"
            app:type="circle" />

        <ImageView
            android:id="@+id/riv_userInfo_camera"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:src="@mipmap/camera" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_54"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:text="@string/user_name"
            android:textColor="@color/black_878787"
            android:textSize="@dimen/sp_14" />


        <EditText
            android:id="@+id/et_userInfo_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="end|center"
            android:inputType="text"
            android:maxLength="20"
            android:maxLines="2"
            android:textColor="@color/black_1A241F"
            android:textColorHint="@color/black_1A241F"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_54"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_des"
            android:textColor="@color/black_878787"
            android:textSize="@dimen/sp_14" />


        <EditText
            android:id="@+id/et_userInfo_des"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="end|center"
            android:hint="@string/user_des_tip"
            android:inputType="text"
            android:maxLength="30"
            android:maxLines="2"
            android:textColor="@color/black_1A241F"
            android:textColorHint="@color/black_878787"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_54"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:text="@string/user_birthday"
            android:textColor="@color/black_878787"
            android:textSize="@dimen/sp_14" />


        <TextView
            android:id="@+id/tv_userInfo_birthday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="end|center"
            android:maxLength="30"
            android:maxLines="2"
            android:text="@string/not_setting"
            android:textColor="@color/black_1A241F"
            android:textSize="@dimen/sp_16" />

        <ImageView
            android:id="@+id/iv_userInfo_birthday"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:src="@mipmap/arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_54"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:text="@string/user_sex"
            android:textColor="@color/black_878787"
            android:textSize="@dimen/sp_14" />


        <TextView
            android:id="@+id/tv_userInfo_sex"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="end|center"
            android:maxLength="30"
            android:maxLines="2"
            android:text="@string/not_setting"
            android:textColor="@color/black_1A241F"
            android:textSize="@dimen/sp_16" />

        <ImageView
            android:id="@+id/iv_userInfo_sex"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:src="@mipmap/arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_54"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:text="@string/user_phone"
            android:textColor="@color/black_878787"
            android:textSize="@dimen/sp_14" />


        <TextView
            android:id="@+id/tv_userInfo_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end|center"
            android:textColor="@color/black_1A241F"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>
</LinearLayout>